# qlc

./: ChangeLog  README  TODO  configure.ac  coverage.sh  create-dmg.sh  i18n.pri  qlc.pro  unittest.sh  variables.pri
debian/: changelog  control  qlc.install
docs/: Makefile.am  addeditfixtures.html  addvcbuttonmatrix.html  busmanager.html  capabilityeditor.html  capabilitywizard.html  channeleditor.html  chasereditor.html  collectioneditor.html  commandlineparameters.html  concept.html  docs.pro  efxeditor.html  fixturedefinitioneditor.html  fixtureeditor.html  fixturegroupeditor.html  fixturemanager.html  fixturemonitor.html  functionmanager.html  functionwizard.html  howto-add-fixtures.html  howto-input-mapping.html  howto-input-profiles.html  howto-output-mapping.html  index.html  modeeditor.html  rgbmatrixeditor.html  rgbscriptapi.html  sceneeditor.html  selectfixture.html  selectfunction.html  selectinputchannel.html  tutorial.html  vcbutton.html  vcbuttonmatrix.html  vccuelist.html  vcframe.html  vclabel.html  vcslider.html  vcslidermatrix.html  (+4 more)
engine/src/: avolitesd4parser.cpp  avolitesd4parser.h  bus.cpp  bus.h  chaser.cpp  chaser.h  chaserrunner.cpp  chaserrunner.h  chaserstep.cpp  chaserstep.h  collection.cpp  collection.h  cue.cpp  cue.h  cuestack.cpp  cuestack.h  doc.cpp  doc.h  efx.cpp  efx.h  efxfixture.cpp  efxfixture.h  fadechannel.cpp  fadechannel.h  fixture.cpp  fixture.h  fixturegroup.cpp  fixturegroup.h  function.cpp  function.h  genericdmxsource.cpp  genericdmxsource.h  genericfader.cpp  genericfader.h  inputmap.cpp  inputmap.h  inputpatch.cpp  inputpatch.h  intensitygenerator.cpp  intensitygenerator.h  (+45 more)
engine/test/: chaser_test.cpp  chaser_test.h  chaserrunner_test.cpp  chaserrunner_test.h  collection_test.cpp  collection_test.h  doc_test.cpp  doc_test.h  efx_test.cpp  efx_test.h  efxfixture_test.cpp  efxfixture_test.h  fadechannel_test.cpp  fadechannel_test.h  fixture_test.cpp  function_stub.h  function_test.cpp  genericfader_test.cpp  genericfader_test.h  inputmap_test.cpp  intensitygenerator_test.cpp  main.cpp  mastertimer_stub.cpp  mastertimer_stub.h  mastertimer_test.cpp  mastertimer_test.h  outputmap_test.cpp  palettegenerator_test.cpp  qlcchannel_test.cpp  qlcchannel_test.h  qlcfile_test.cpp  qlcfixturemode_test.cpp  qlcfixturemode_test.h  qlcinputprofile_test.cpp  qlcintensitygenerator_test.cpp  qlcintensitygenerator_test.h  qlcmacros_test.cpp  rgbmatrix_test.cpp  rgbmatrix_test.h  scene_stub.cpp  (+5 more)
etc/: etc.pro  qlc.nsi
fixtureeditor/: Makefile.am  app.cpp  capabilitywizard.cpp  editcapability.cpp  editcapability.ui  editchannel.cpp  editchannel.ui  edithead.cpp  editmode.cpp  editmode.ui  fixtureeditor.cpp  fixtureeditor.pro  fixtureeditor.ui  fixtureeditor_de_DE.ts
fixtureeditor/src/: aboutbox.cpp  app.cpp  app.h  editcapability.h  editcapability.ui  editchannel.cpp  editchannel.h  editmode.cpp  editmode.h  editmode.ui  fixtureeditor.cpp  fixtureeditor.h  fixtureeditor.ui
fixtures/: Martin-MAC500.qxf  ProLights-V200.qxf  Varytec-Easy-Move-LED-XS-Spot.qxf  Varytec-Gigabar-II.qxf  fixtures.pro  i-Pix-BB4.qxf
gfx/: Makefile.am
hotplugmonitor/: platform.pri
hotplugmonitor/src/: hotplugmonitor-iokit.cpp  hotplugmonitor-udev.cpp  hotplugmonitor-win32.cpp  hotplugmonitor.cpp  hotplugmonitor.h  hpmprivate-iokit.cpp  hpmprivate-iokit.h  hpmprivate-win32.h  src.pro
hotplugmonitor/test/: hpmtest.cpp  hpmtest.h  main.cpp  test.pro
launcher/: launcher.pro
libs/: libs.pro
libs/common/: Makefile.am  common.pro  moc_qlcdocbrowser.cpp  moc_qlcinplugin.cpp  moc_qlcoutplugin.cpp  moc_qlcplugin.cpp  qlccapability.cpp  qlccapability.h  qlcchannel.cpp  qlcchannel.h  qlcdocbrowser.cpp  qlcdocbrowser.h  qlcfile.cpp  qlcfile.h  qlcfixturedef.cpp  qlcfixturedef.h  qlcfixturemode.cpp  qlcfixturemode.h  qlcinplugin.cpp  qlcinplugin.h  qlcoutplugin.cpp  qlcoutplugin.h  qlcphysical.cpp  qlcphysical.h  qlcplugin.cpp  qlcplugin.h  qlctypes.h
libs/dmx4linuxout/: Makefile.am  configuredmx4linuxout.cpp  configuredmx4linuxout.h  configuredmx4linuxout.ui  dmx4linuxout.cpp  dmx4linuxout.h  dmx4linuxout.pro
libs/hidinput/: Makefile.am  configurehidinput.cpp  configurehidinput.h  configurehidinput.ui  hiddevice.cpp  hiddevice.h  hideventdevice.cpp  hideventdevice.h  hidinput.cpp  hidinput.h  hidinput.pro  hidpoller.cpp  hidpoller.h
libs/llaout/: llaout.cpp  llaout.h  llaout.pro
libs/usbdmxout/: Makefile.am  configureusbdmxout.cpp  configureusbdmxout.h  configureusbdmxout.ui  usbdmxout-win32.cpp  usbdmxout-win32.h  usbdmxout.cpp  usbdmxout.h  usbdmxout.pro
macx/: macx.pro
main/: Makefile.am  app.cpp  chasereditor.cpp  collectioneditor.cpp  consolechannel.cpp  dmxmap.cpp  dmxmap.h  dummyoutplugin.cpp  dummyoutplugin.h  efxeditor.ui  fixtureselection.ui  function.h  functionselection.cpp  functionselection.h  functionselection.ui  inputmap.cpp  inputmap.h  keybind.cpp  keybind.h  main.cpp  main.pro  pluginloader.cpp  pluginloader.h  qlc.pro  scene.cpp  sceneeditor.cpp  sceneeditor.h  sceneeditor.ui  vcbutton.cpp  vcbuttonproperties.cpp  vcbuttonproperties.ui  vccuelistproperties.cpp  vccuelistproperties.ui  vcframeproperties.cpp  vcxypadproperties.ui
main/src/: aboutbox.cpp  addfixture.cpp  addfixture.h  addfixture.ui  advancedsceneeditor.cpp  advancedsceneeditor.h  advancedsceneeditor.ui  app.cpp  app.h  assignhotkey.cpp  assignhotkey.h  assignsliderhotkey.cpp  assignsliderhotkey.h  assignsliderhotkey.ui  bus.cpp  bus.h  busproperties.cpp  busproperties.h  busproperties.ui  chaser.cpp  chaser.h  chasereditor.cpp  chasereditor.h  chasereditor.ui  collection.cpp  collection.h  collectioneditor.cpp  collectioneditor.h  collectioneditor.ui  consolechannel.cpp  consolechannel.h  consolechannel.ui  dmxmap.cpp  dmxmap.h  dmxmapeditor.cpp  dmxmapeditor.h  dmxmapeditor.ui  dmxpatcheditor.h  dmxpatcheditor.ui  doc.cpp  (+87 more)
plugins/: plugins.pro
plugins/dmx4linuxout/: dmx4linuxout.pro
plugins/hidinput/: hidinput.pro
plugins/interfaces/: qlcinplugin.h  (+3 more)
rgbscripts/: fullcolumns.js  fullrows.js  oppositecolumns.js  oppositerows.js  rgbscripts.pro  singlerandom.js
(+397 files in other folders)
